--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Card Creator</title>
-    <meta charset='utf-8' />
+    <meta charset='utf-8'/>
 </head>
 <body>
 <p>Google Sheets API Quickstart</p>
@@ -12,6 +12,28 @@
 <button id="signout-button" style="display: none;">Sign Out</button>
 
 <pre id="content"></pre>
+
+<script type="text/javascript">
+    /**
+     * Just stupid functions
+     */
+    function getExcelColumnName(columnNumber)
+    {
+        let dividend = columnNumber;
+        let columnName = '';
+        let modulo;
+
+        while (dividend > 0)
+        {
+            modulo = (dividend - 1) % 26;
+            columnName = String.fromCharCode(65 + modulo) + columnName;
+            dividend = Math.floor((dividend - modulo) / 26);
+        }
+
+        return columnName;
+    }
+
+</script>
 
 <script type="text/javascript">
     // Client ID and API key from the Developer Console
@@ -62,6 +84,7 @@
         if (isSignedIn) {
             authorizeButton.style.display = 'none';
             signoutButton.style.display = 'block';
+            listColumns();
             listMajors();
         } else {
             authorizeButton.style.display = 'block';
@@ -96,6 +119,50 @@
     }
 
     /**
+     * Get the user's spreadsheets list in order to let them choose one
+     */
+    function getSheetsList() {
+        return []
+    }
+
+    /**
+     * Make the sheet into a JSON object by column
+     */
+    function getJSONFromSheet(sheet_id){
+        gapi.client.sheets.spreadsheets.get({
+            spreadsheetId: sheet_id
+//            includeGridData: true
+//            range:''
+        }).then(function(sheet_info){
+            let page = 1;
+            let gridProperties = sheet_info.result.sheets[page].properties.gridProperties;
+            let columnCount = gridProperties.columnCount;
+            let rowCount = gridProperties.rowCount;
+            let sheetTitle = sheet_info.result.sheets[page].properties.title;
+            console.log(sheet_info);
+
+            let lastColumnLetter = getExcelColumnName(columnCount);
+            let fullRange = sheetTitle + '!A1:' + lastColumnLetter + rowCount.toString();
+            console.log("Last cell: ", fullRange, columnCount, lastColumnLetter);
+
+            gapi.client.sheets.spreadsheets.values.get({
+                spreadsheetId: sheet_id,
+                'range': fullRange
+            }).then(function(sheet_data){
+                console.log(sheet_data);
+                let columns = sheet_data.result.values[0];
+                console.log("Columns", columns)
+
+            });
+        })
+    }
+
+    getJSONFromSheet('1pOvtoewrUrTNQIvalZF_ruJXeue4IAx03Cgo3W8-R0A');
+
+    function listColumns(){}
+
+
+    /**
      * Print the names and majors of students in a sample spreadsheet:
      * https://docs.google.com/spreadsheets/d/1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms/edit
      */
@@ -103,19 +170,19 @@
         gapi.client.sheets.spreadsheets.values.get({
             spreadsheetId: '1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms',
             range: 'Class Data!A2:E',
-        }).then(function(response) {
-            var range = response.result;
+        }).then(function (response) {
+            let range = response.result;
             if (range.values.length > 0) {
                 appendPre('Name, Major:');
                 for (i = 0; i < range.values.length; i++) {
-                    var row = range.values[i];
+                    let row = range.values[i];
                     // Print columns A and E, which correspond to indices 0 and 4.
                     appendPre(row[0] + ', ' + row[4]);
                 }
             } else {
                 appendPre('No data found.');
             }
-        }, function(response) {
+        }, function (response) {
             appendPre('Error: ' + response.result.error.message);
         });
     }
