--- a/index.html
+++ b/index.html
@@ -1,197 +1,55 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Card Creator</title>
-    <meta charset='utf-8'/>
+    <meta charset="UTF-8">
+    <title>Binder Sheets</title>
+
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="bower_components/vue/dist/vue.js"></script>
+
+
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
+
+    <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
+
 </head>
 <body>
-<p>Google Sheets API Quickstart</p>
 
-<!--Add buttons to initiate auth sequence and sign out-->
-<button id="authorize-button" style="display: none;">Authorize</button>
-<button id="signout-button" style="display: none;">Sign Out</button>
+<div id="app">
 
-<pre id="content"></pre>
+    <!--If they're logged in...-->
+    <div v-if="loggedIn">
+        <div class="container">
 
-<script type="text/javascript">
-    /**
-     * Just stupid functions
-     */
-    function getExcelColumnName(columnNumber)
-    {
-        let dividend = columnNumber;
-        let columnName = '';
-        let modulo;
+        </div>
+    </div>
 
-        while (dividend > 0)
-        {
-            modulo = (dividend - 1) % 26;
-            columnName = String.fromCharCode(65 + modulo) + columnName;
-            dividend = Math.floor((dividend - modulo) / 26);
-        }
+    <!--If they're not logged in...-->
+    <div v-else>
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3 well">
+            <h1 class="text-center">Binder Sheets</h1>
 
-        return columnName;
-    }
+            <div class="col-xs-6 col-xs-offset-3">
+                <a class="btn btn-block btn-social btn-facebook">
+                    <span class="fa fa-google"></span> Sign in with Google
+                </a>
+                <a href="" class="btn btn-block btn-social btn-google">
+                    <span class="fa fa-youtube-play"></span> Watch Tutorial on Youtube
+                </a>
+            </div>
 
-</script>
+        </div>
+    </div>
 
-<script type="text/javascript">
-    // Client ID and API key from the Developer Console
-    var CLIENT_ID = '327908214436-tota76865ckn40g42kq5349nqs9es06p.apps.googleusercontent.com';
-    // API Key -> AIzaSyBQyUc55xXeugOfoCN51sNGJKLEDWh7ihE
-    // Array of API discovery doc URLs for APIs used by the quickstart
-    var DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
-
-    // Authorization scopes required by the API; multiple scopes can be
-    // included, separated by spaces.
-    var SCOPES = "https://www.googleapis.com/auth/spreadsheets.readonly";
-
-    var authorizeButton = document.getElementById('authorize-button');
-    var signoutButton = document.getElementById('signout-button');
-
-    /**
-     *  On load, called to load the auth2 library and API client library.
-     */
-    function handleClientLoad() {
-        gapi.load('client:auth2', initClient);
-    }
-
-    /**
-     *  Initializes the API client library and sets up sign-in state
-     *  listeners.
-     */
-    function initClient() {
-        gapi.client.init({
-            discoveryDocs: DISCOVERY_DOCS,
-            clientId: CLIENT_ID,
-            scope: SCOPES
-        }).then(function () {
-            // Listen for sign-in state changes.
-            gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
-
-            // Handle the initial sign-in state.
-            updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
-            authorizeButton.onclick = handleAuthClick;
-            signoutButton.onclick = handleSignoutClick;
-        });
-    }
-
-    /**
-     *  Called when the signed in status changes, to update the UI
-     *  appropriately. After a sign-in, the API is called.
-     */
-    function updateSigninStatus(isSignedIn) {
-        if (isSignedIn) {
-            authorizeButton.style.display = 'none';
-            signoutButton.style.display = 'block';
-            listColumns();
-            listMajors();
-        } else {
-            authorizeButton.style.display = 'block';
-            signoutButton.style.display = 'none';
-        }
-    }
-
-    /**
-     *  Sign in the user upon button click.
-     */
-    function handleAuthClick(event) {
-        gapi.auth2.getAuthInstance().signIn();
-    }
-
-    /**
-     *  Sign out the user upon button click.
-     */
-    function handleSignoutClick(event) {
-        gapi.auth2.getAuthInstance().signOut();
-    }
-
-    /**
-     * Append a pre element to the body containing the given message
-     * as its text node. Used to display the results of the API call.
-     *
-     * @param {string} message Text to be placed in pre element.
-     */
-    function appendPre(message) {
-        var pre = document.getElementById('content');
-        var textContent = document.createTextNode(message + '\n');
-        pre.appendChild(textContent);
-    }
-
-    /**
-     * Get the user's spreadsheets list in order to let them choose one
-     */
-    function getSheetsList() {
-        return []
-    }
-
-    /**
-     * Make the sheet into a JSON object by column
-     */
-    function getJSONFromSheet(sheet_id){
-        gapi.client.sheets.spreadsheets.get({
-            spreadsheetId: sheet_id
-//            includeGridData: true
-//            range:''
-        }).then(function(sheet_info){
-            let page = 1;
-            let gridProperties = sheet_info.result.sheets[page].properties.gridProperties;
-            let columnCount = gridProperties.columnCount;
-            let rowCount = gridProperties.rowCount;
-            let sheetTitle = sheet_info.result.sheets[page].properties.title;
-            console.log(sheet_info);
-
-            let lastColumnLetter = getExcelColumnName(columnCount);
-            let fullRange = sheetTitle + '!A1:' + lastColumnLetter + rowCount.toString();
-            console.log("Last cell: ", fullRange, columnCount, lastColumnLetter);
-
-            gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: sheet_id,
-                'range': fullRange
-            }).then(function(sheet_data){
-                console.log(sheet_data);
-                let columns = sheet_data.result.values[0];
-                console.log("Columns", columns)
-
-            });
-        })
-    }
-
-    getJSONFromSheet('1pOvtoewrUrTNQIvalZF_ruJXeue4IAx03Cgo3W8-R0A');
-
-    function listColumns(){}
+</div>
 
 
-    /**
-     * Print the names and majors of students in a sample spreadsheet:
-     * https://docs.google.com/spreadsheets/d/1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms/edit
-     */
-    function listMajors() {
-        gapi.client.sheets.spreadsheets.values.get({
-            spreadsheetId: '1BxiMVs0XRA5nFMdKvBdBZjgmUUqptlbs74OgvE2upms',
-            range: 'Class Data!A2:E',
-        }).then(function (response) {
-            let range = response.result;
-            if (range.values.length > 0) {
-                appendPre('Name, Major:');
-                for (i = 0; i < range.values.length; i++) {
-                    let row = range.values[i];
-                    // Print columns A and E, which correspond to indices 0 and 4.
-                    appendPre(row[0] + ', ' + row[4]);
-                }
-            } else {
-                appendPre('No data found.');
-            }
-        }, function (response) {
-            appendPre('Error: ' + response.result.error.message);
-        });
-    }
+<!--Local vue code-->
+<script src="js/main.js"></script>
 
-</script>
-
-<script async defer src="https://apis.google.com/js/api.js"
-        onload="this.onload=function(){};handleClientLoad()"
-        onreadystatechange="if (this.readyState === 'complete') this.onload()">
-</script>
 </body>
 </html>
