This bunny should be killed.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="bower_components/vue-router/dist/vue-router.js"></script>
 
     <!--Vue templates-->
-    <script src="js/vue-templates.js"></script>
+    <script src="components/creation-route.js"></script>
 
     <!--JQuery, Bootstrap, etc-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
