--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>Binder Sheets</title>
 
+    <!--Just stupid functions-->
+    <script src="js/just_stupid_functions.js"></script>
+
     <!--Google Auth internal functions-->
     <script src="js/oauth_functions.js"></script>
 
     <!--Vue framework-->
     <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/vue-router/dist/vue-router.js"></script>
-
-    <!--Vue templates-->
-    <script src="components/creation-route.js"></script>
 
     <!--JQuery, Bootstrap, etc-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -21,11 +21,18 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 
+    <!--Data Retrieval-->
+    <script src="js/data_retrieval.js"></script>
+
+    <!--Vue templates-->
+    <script src="components/creation-route.js"></script>
+
     <!--Bootstrap Social - for Google login and Youtube button-->
     <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
 
     <!--Mobile responsivity-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 
