--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!--Just stupid functions-->
     <script src="js/just_stupid_functions.js"></script>
 
+    <!--Classes-->
+    <script src="classes/template.js"></script>
+
     <!--Google Auth internal functions-->
     <script src="js/oauth_functions.js"></script>
 
