--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 
     <!--Data Retrieval-->
@@ -35,6 +35,9 @@
 
     <!--Mobile responsivity-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!--Other style-->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
