Spinning up the hamster...

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="bower_components/vue/dist/vue.js"></script>
     <script src="bower_components/vue-router/dist/vue-router.js"></script>
 
+    <!--JS Store-->
+    <script src="bower_components/store2/dist/store2.js"></script>
+
     <!--JQuery, Bootstrap, etc-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -107,13 +110,13 @@
 
 <!--Local vue code-->
 <script src="js/main.js"></script>
+<meta name="google-signin-client_id"
+content="327908214436-f6cf47v3s1js0hf3llkde33gj8itat05.apps.googleusercontent.com" >
+
 <!--Google Auth-->
 <script src="https://apis.google.com/js/platform.js" async defer
-        onload="this.onload=function(){};handleClientLoad()"
-        onreadystatechange="if (this.readyState === 'complete') this.onload()"
+        onreadystatechange="if (this.readyState === 'complete') this.onload();"
+        onload="this.onload=function(){};handleClientLoad();"
 ></script>
-<meta name="google-signin-client_id"
-      content="327908214436-tota76865ckn40g42kq5349nqs9es06p.apps.googleusercontent.com">
-
 </body>
 </html>
