--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+
     <!--<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css">
 
     <!--Data Retrieval-->
     <script src="js/data_retrieval.js"></script>
+
+    <!--Data Storage-->
+    <script src="node_modules/idb/lib/idb.js"></script>
+    <script src="js/db.js"></script>
 
     <!--Vue templates-->
     <script src="components/creation-route.js"></script>
