--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="js/just_stupid_functions.js"></script>
 
     <!--Classes-->
-    <script src="classes/template.js"></script>
+    <script src="classes/BinderTemplate.js"></script>
+    <script src="classes/Binding.js"></script>
 
     <!--Google Auth internal functions-->
     <script src="js/oauth_functions.js"></script>
@@ -36,7 +37,11 @@
     <script src="js/db.js"></script>
 
     <!--Vue templates-->
-    <script src="components/creation-route.js"></script>
+    <script src="routes/creation-route.js"></script>
+    <script src="routes/edit-route.js"></script>
+    <script src="routes/routes.js"></script>
+
+    <script src="node_modules/cssx/lib/cssx.js"></script>
 
     <!--Bootstrap Social - for Google login and Youtube button-->
     <link rel="stylesheet" href="bower_components/bootstrap-social/bootstrap-social.css">
